--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-<title>jQuery Countdown</title>
+<title>Happy Trismas!</title>
 <link rel="stylesheet" href="css/jquery.countdown.css">
 <style type="text/css">
 body > iframe { display: none; }
@@ -22,7 +22,7 @@ $(function () {
 </script>
 </head>
 <body>
-<h1>Happy Trismas!</h1>
+<p>Trismas day in:</p>
 <div id="defaultCountdown"></div>
 </body>
 </html>
