--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
     <title>Cover Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./Cover Template for Bootstrap_files/bootstrap.min.css" rel="stylesheet">
+    <link href="/files/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="./Cover Template for Bootstrap_files/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="files/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./Cover Template for Bootstrap_files/cover.css" rel="stylesheet">
+    <link href="files/cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="./Cover Template for Bootstrap_files/ie-emulation-modes-warning.js.download"></script><style type="text/css">
+    <script src="files/ie-emulation-modes-warning.js.download"></script><style type="text/css">
 :root #carbonads-container,
 :root #content > #right > .dose > .dosesingle,
 :root #content > #center > .dose > .dosesingle,
@@ -77,14 +77,5 @@
 
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./Cover Template for Bootstrap_files/jquery.min.js.download"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="./Cover Template for Bootstrap_files/bootstrap.min.js.download"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="./Cover Template for Bootstrap_files/ie10-viewport-bug-workaround.js.download"></script>
-  
 
 </body></html>
