--- a/index.html
+++ b/index.html
@@ -22,12 +22,22 @@
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="files/ie-emulation-modes-warning.js.download"></script><style type="text/css">
-:root #carbonads-container,
-:root #content > #right > .dose > .dosesingle,
-:root #content > #center > .dose > .dosesingle,
-:root .carbonad
-{ display: none !important; }</style>
+    <script src="files/ie-emulation-modes-warning.js.download"></script>
+    <style type="text/css">
+        :root #carbonads-container,
+        :root #content > #right > .dose > .dosesingle,
+        :root #content > #center > .dose > .dosesingle,
+        :root .carbonad
+        { display: none !important; }
+        body {
+         margin: 0;
+         background: url('https://www.google.com/images/srpr/logo3w.png');
+         background-size: 1440px 800px;
+         background-repeat:no-repeat;
+        display: compact;
+         font: 13px/18px "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+    </style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
