--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         body {
          margin: 0;
          background: url('https://www.google.com/images/srpr/logo3w.png');
-         background-size: 1440px 800px;
+         background-size: cover;
          background-repeat:no-repeat;
         display: compact;
          font: 13px/18px "Helvetica Neue", Helvetica, Arial, sans-serif;
