--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         { display: none !important; }
         body {
          margin: 0;
-         background: url('https://www.google.com/images/srpr/logo3w.png');
+         background: url('https://i.imgur.com/fKFMud1.jpg');
          background-size: cover;
          background-repeat:no-repeat;
         display: compact;
