--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0041)https://getbootstrap.com/examples/cover/# -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="https://getbootstrap.com/favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Trismas</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/files/bootstrap.min.css" rel="stylesheet">
@@ -20,9 +19,6 @@
     <!-- Custom styles for this template -->
     <link href="files/cover.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="files/ie-emulation-modes-warning.js.download"></script>
     <style type="text/css">
         :root #carbonads-container,
         :root #content > #right > .dose > .dosesingle,
