--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <h1 class="cover-heading">Cover your page.</h1>
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
-              <a href="https://getbootstrap.com/examples/cover/#" class="btn btn-lg btn-default">Learn more</a>
+              <a href="https://www.facebook.com/events/101538427088788/" class="btn btn-lg btn-default">Full Details (private)</a>
             </p>
           </div>
 
