--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="cover-container">
 
           <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <h1 class="cover-heading">Happy Trismas!</h1>
+            <p class="lead">Join me for an evening of tabletop gaming with an italian twist.</p>
             <p class="lead">
               <a href="https://www.facebook.com/events/101538427088788/" class="btn btn-lg btn-default">Full Details (private)</a>
             </p>
