--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="cover-container">
 
           <div class="inner cover">
-            <h1 class="cover-heading">Happy Trismas!</h1>
+            <h1 class="cover-heading">Trismas 2017: July the 22nd</h1>
             <p class="lead">Join me for an evening of tabletop gaming with an italian twist on the 22nd of July.</p>
             <p class="lead">
               <a href="https://www.facebook.com/events/101538427088788/" class="btn btn-lg btn-default">Full Details (private)</a>
