--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">Trismas: July the 22nd</h1>
-            <p class="lead">Join me for an evening of tabletop gaming with an italian twist!</p>
+            <p class="lead">Join me for an evening of tabletop games with an italian twist!</p>
             <p class="lead">
               <a href="https://www.facebook.com/events/101538427088788/" class="btn btn-lg btn-default">Full Details (private)</a>
             </p>
