--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         { display: none !important; }
         body {
          margin: 0;
-         background: url('https://i.imgur.com/fKFMud1.jpg');
+         background-color: black;
          background-size: cover;
          background-repeat:no-repeat;
         display: compact;
@@ -47,17 +47,7 @@
         <div class="cover-container">
 
           <div class="inner cover">
-            <h1 class="cover-heading">Trismas: July the 22nd</h1>
-            <p class="lead">Join me for an evening of tabletop games with an italian twist!</p>
-            <p class="lead">
-              <a href="https://www.facebook.com/events/101538427088788/" class="btn btn-lg btn-default">Full Details (private)</a>
-            </p>
-          </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
+            <h1 class="cover-heading">Coming soon...</h1>
           </div>
 
         </div>
