--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         { display: none !important; }
         body {
          margin: 0;
-         background-color: black;
+         background: url('https://i.imgur.com/InEj6DZ.jpg');
          background-size: cover;
          background-repeat:no-repeat;
         display: compact;
@@ -47,7 +47,135 @@
         <div class="cover-container">
 
           <div class="inner cover">
+            <h1 class="cover-heading">Trismas: July the 22nd</h1>
+            <p class="lead">Join me for an evening of tabletop games with an italian twist!</p>
+            <p class="lead">
+              <a href="https://www.facebook.com/events/101538427088788/" class="btn <!DOCTYPE html>
+2
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+3
+    
+4
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+5
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+6
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+7
+    <title>Trismas</title>
+8
+​
+9
+    <!-- Bootstrap core CSS -->
+10
+    <link href="/files/bootstrap.min.css" rel="stylesheet">
+11
+​
+12
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+13
+    <link href="files/ie10-viewport-bug-workaround.css" rel="stylesheet">
+14
+​
+15
+    <!-- Custom styles for this template -->
+16
+    <link href="files/cover.css" rel="stylesheet">
+17
+​
+18
+    <style type="text/css">
+19
+        :root #carbonads-container,
+20
+        :root #content > #right > .dose > .dosesingle,
+21
+        :root #content > #center > .dose > .dosesingle,
+22
+        :root .carbonad
+23
+        { display: none !important; }
+24
+        body {
+25
+         margin: 0;
+26
+         background-color: black;
+27
+         background-size: cover;
+28
+         background-repeat:no-repeat;
+29
+        display: compact;
+30
+         font: 13px/18px "Helvetica Neue", Helvetica, Arial, sans-serif;
+31
+}
+32
+    </style>
+33
+​
+34
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+35
+    <!--[if lt IE 9]>
+36
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+37
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+38
+    <![endif]-->
+39
+  </head>
+40
+​
+41
+  <body>
+42
+​
+43
+    <div class="site-wrapper">
+44
+​
+45
+      <div class="site-wrapper-inner">
+46
+​
+47
+        <div class="cover-container">
+48
+​
+49
+          <div class="inner cover">
+50
             <h1 class="cover-heading">Coming soon...</h1>
+51
+          </div>
+52
+​
+53
+        </div>
+54
+​
+55
+      </div>
+56
+​
+57
+    </div>
+58
+​
+59
+​
+60
+</body></html>btn-lg btn-default">Full Details (private)</a>
+            </p>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Cover template for <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+            </div>
           </div>
 
         </div>
