--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         { display: none !important; }
         body {
          margin: 0;
-         background: url('https://i.imgur.com/InEj6DZ.jpg');
+         background: url('https://i.imgur.com/F6pUbSH.jpg');
          background-size: cover;
          background-repeat:no-repeat;
         display: compact;
@@ -48,7 +48,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <a href="https://www.facebook.com/events/335418790268415/" class="btn btn-lg btn-default">July 21st: Full Details (private)</a>
+              <a href="https://www.facebook.com/events/279229912970794/" class="btn btn-lg btn-default">July 20th: Full Details (private)</a>
             </div>
           </div>
 
