--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         { display: none !important; }
         body {
          margin: 0;
-         background: url('https://i.imgur.com/F6pUbSH.jpg');
+         background: url('https://i.imgur.com/8UoSCGh.png');
          background-size: cover;
          background-repeat:no-repeat;
         display: compact;
