--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         { display: none !important; }
         body {
          margin: 0;
-         background: url('https://i.imgur.com/8UoSCGh.png');
+         background: url('https://i.imgur.com/CMtZHam.jpg');
          background-size: cover;
          background-repeat:no-repeat;
         display: compact;
@@ -48,7 +48,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <a href="https://www.facebook.com/events/249484224048266/" class="btn btn-lg btn-default">July 16th: Full Details (private)</a>
+              <a href="https://www.facebook.com/events/191673377140315/" class="btn btn-lg btn-default">July 22nd: Full Details (private)</a>
             </div>
           </div>
 
