--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <a href="https://www.facebook.com/events/191673377140315/" class="btn btn-lg btn-default">July 22nd: Full Details (private)</a>
+              <a href="https://www.facebook.com/events/191673377140315/" class="btn btn-lg btn-default">July 23rd: Full Details (private)</a>
             </div>
           </div>
 
