--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         { display: none !important; }
         body {
          margin: 0;
-         background: url('https://i.imgur.com/CMtZHam.jpg');
+         background: url('https://i.imgur.com/Qq5Df5U.jpg');
          background-size: cover;
          background-repeat:no-repeat;
         display: compact;
